--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -13,7 +13,7 @@ services:
         - COMMONS_BRANCH=${COMMONS_BRANCH:-main}
     # Build the image with name and tag
     # Exit with an error message containing err if unset or empty in the environment
-    image: sennet/sennet-auth:${HUBMAP_AUTH_VERSION:?err}
+    image: sennet/sennet-auth:${SENNET_AUTH_VERSION:?err}
     environment:
       - DEPLOY_MODE=dev
     ports:
