--- a/nginx/conf.d-dev/sennet-auth.conf
+++ b/nginx/conf.d-dev/sennet-auth.conf
@@ -1,17 +1,9 @@
-# Define the upstream hubmap-auth-server to be used by other API (on the same machine) nginx configs
-# This sever will be accessed via `http://hubmap-auth-server/api_auth` in other conf files
-# We have to run the hubmap-auth service on a different local port to be used by other APIs
-# when deployed with multiple sub-domains pointing to the same machine with same IP
-upstream hubmap-auth-server {
-    server localhost:8000;
-}
-
 # Port 80 on host maps to 8080 on container
 server {
     # Only root can listen on ports below 1024, we use higher-numbered ports
-    # since nginx is running under non-root user hubmap
+    # since nginx is running under non-root user codcc
     listen 8080;
-    server_name gateway.dev.hubmapconsortium.org;
+    server_name gateway.dev.sennetconsortium.org;
     
     location / {
         return 301 https://$host$request_uri;
@@ -21,13 +13,13 @@ server {
 # Port 443 on host maps to 4430 on container
 server {
     # Only root can listen on ports below 1024, we use higher-numbered ports
-    # since nginx is running under non-root user hubmap
+    # since nginx is running under non-root user codcc
     listen 4430 ssl; # managed by Certbot
-    server_name gateway.dev.hubmapconsortium.org;
+    server_name gateway.dev.sennetconsortium.org;
     root /usr/share/nginx/html;
 
-    ssl_certificate /etc/letsencrypt/live/gateway.dev.hubmapconsortium.org/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/gateway.dev.hubmapconsortium.org/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/gateway.dev.sennetconsortium.org/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/gateway.dev.sennetconsortium.org/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -82,11 +74,11 @@ server {
     # Only root can listen on ports below 1024, we use higher-numbered ports
     # since nginx is running under non-root user hubmap
     listen 8443 ssl; # managed by Certbot
-    server_name gateway.dev.hubmapconsortium.org;
+    server_name gateway.dev.sennetconsortium.org;
     root /usr/share/nginx/html;
 
-    ssl_certificate /etc/letsencrypt/live/gateway.dev.hubmapconsortium.org/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/gateway.dev.hubmapconsortium.org/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/gateway.dev.sennetconsortium.org/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/gateway.dev.sennetconsortium.org/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -105,31 +97,4 @@ server {
         # Use IP v4 "127.0.0.1" instead of "localhost" to avoid 502 error caused by DNS failure
         uwsgi_pass uwsgi://127.0.0.1:5000;
     }
-}
-
-# hubmap-auth service
-server {
-    # Only root can listen on ports below 1024, we use higher-numbered ports
-    # since nginx is running under non-root user hubmap
-    listen 8000;
-    
-    server_name localhost;
-    root /usr/share/nginx/html;
- 
-    # We need this logging for inspecting auth requests from other internal services
-    # Logging to the mounted volume for outside container access
-    access_log /usr/src/app/log/nginx_access_hubmap-auth-server.log;
-    error_log /usr/src/app/log/nginx_error_hubmap-auth-server.log warn;
-    
-    location = /favicon.ico {
-        alias /usr/share/nginx/html/favicon.ico;
-    }
-    
-    # Pass reqeusts to the uWSGI server using the "uwsgi" protocol on port 5000
-    location / { 
-        include uwsgi_params;
-        # Use IP v4 "127.0.0.1" instead of "localhost" to avoid 502 error caused by DNS failure
-        uwsgi_pass uwsgi://127.0.0.1:5000;
-    }
-
 }
