--- a/nginx/conf.d-dev/zssets.conf
+++ b/nginx/conf.d-dev/zssets.conf
@@ -19,8 +19,7 @@ server {
     server_name assets.dev.sennetconsortium.org;
     
     # This directory will be mounted from host to docker
-    # TODO: Point this to the appropriate path
-    # root /hive/hubmap-dev/assets;
+    root /codcc/dev-test/data-dev/assets;
 
     ssl_certificate /etc/letsencrypt/live/assets.dev.sennetconsortium.org/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/assets.dev.sennetconsortium.org/privkey.pem; # managed by Certbot
