Routing to old file assets

--- a/nginx/conf.d-dev/zssets.conf
+++ b/nginx/conf.d-dev/zssets.conf
@@ -18,9 +18,6 @@ server {
     listen 4430 ssl http2;
     server_name assets.dev.sennetconsortium.org;
     
-    # This directory will be mounted from host to docker
-    root /codcc/dev-test/data-dev/assets;
-
     ssl_certificate /etc/letsencrypt/live/assets.dev.sennetconsortium.org/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/assets.dev.sennetconsortium.org/privkey.pem; # managed by Certbot
 
@@ -32,64 +29,7 @@ server {
         alias /usr/share/nginx/html/favicon.ico;
     }
 
-    # Exact request URI matching
-    location = /file_auth {
-        internal;
-        # Upstream sennet-auth server
-        proxy_pass https://gateway.dev.sennetconsortium.org:8443/file_auth;
-        # No need to send the POST body
-        proxy_pass_request_body off;
-        proxy_set_header Content-Length "";
-        proxy_set_header X-Original-Request-Method $request_method;
-        proxy_set_header X-Original-URI $request_uri;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location / {
-        # Always enable CORS 
-        # Response to preflight requests
-        if ($request_method = 'OPTIONS') {
-            # The directive `add_header` doesn't work when response status code is 401, 403 or 500
-            # The `always` parameter is specified so the header field will be added regardless of the response code
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, OPTIONS' always;
-            
-            # Custom headers and headers various browsers should be OK with but aren't
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,Authorization, MAuthorization,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            
-            # Cache the response to this preflight request in browser for 24 hours (86400 seconds) 
-            # without sending another preflight request
-            add_header 'Access-Control-Max-Age' 86400 always;
-            
-            add_header 'Content-Type' 'text/plain; charset=utf-8' always;
-            add_header 'Content-Length' 0 always;
-            return 204;
-        }
-
-        # Response to the original requests (HTTP methods are case-sensitive) with CORS enabled
-        if ($request_method ~ (POST|GET|PUT|HEAD)) {
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,Authorization, MAuthorization,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-        }
-        
-        # Send all requests to the '/file_auth' endpoint for authentication and authorization   
-        auth_request /file_auth;
-
-        # Once authenticated/authorized, allow file access
-        # Requested by the portal-ui team, return 404 for both with slash and non-slash on a directory - 2/15/2022
-        # By default, Nginx does a 301 redirect if the requested directory has no trailing slash
-        # it retuns 403 if the requested directory has the trailing slash (due to direcotry index listing not enabled)
-        if (-d $document_root/$document_uri) {
-            return 404;
-        }
-        
-        sendfile on;
-        sendfile_max_chunk 2m;
-        tcp_nopush on;
+    location = / {
+        proxy_pass http://file-assets:8081;
     }
 }
